--- a/styles.css
+++ b/styles.css
@@ -34,11 +34,11 @@ margin: 50px 0px 70px 0px;
     text-align:left;
     padding-left:12%;
     }
-/* 
+
 @keyframes aagepiche{
     from {padding-left:30px;}
        to  {padding-right:10px;}
-} */
+}
 
 nav{
     width: 60%;
