--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@ header{
 .logo{
 width: 30%;
 color: #fff;
+height: 40px;
 background-image: linear-gradient(#8d98e3 40%,#854fee 60%);
 
 box-sizing:border-box;
